language/move-lang/tests/move_check/typing/mutate_resource.exp
error: 

   ┌── tests/move_check/typing/mutate_resource.move:2:5 ───
   │
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
 3 │ 
 4 │     fun t0(r: &mut R) {
   │                    - The type: '0x8675309::M::R'
 5 │         *r = R {};
   │          ^ Invalid mutation. Can only assign to references of a copyable type
   │

error: 

   ┌── tests/move_check/typing/mutate_resource.move:8:12 ───
   │
 8 │     fun t1<T>(r: &mut T, x: T) {
   │            - Is found to be a non-copyable type here
   │                       - The type: 'T'
 9 │         *r = x;
   │          ^ Invalid mutation. Can only assign to references of a copyable type
   │

error: 

    ┌── tests/move_check/typing/mutate_resource.move:12:15 ───
    │
 12 │     fun t2<T: resource>(r: &mut T, x: T) {
    │               -------- Is found to be a non-copyable type here
    │                                 - The type: 'T'
 13 │         *r = x;
    │          ^ Invalid mutation. Can only assign to references of a copyable type
    │

